--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
-  ]
+  ],
+
+  "ocb": {
+    "fileMatch": ["builder.ya?ml$"]
+  }
 }
